core/tests/ui/sensitive/field_crypto_without_value.rs
use appdb::Sensitive;
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, Sensitive)]
struct InvalidRecord {
    #[secure]
    #[crypto(field_account)]
    pub secret: String,
}

fn main() {}
